sumo/tests/sumo/output/tripinfo/errors/file_false/errors.sumo
Error: Could not build output file 'xxx/tripinfos.xml'.
Quitting (on error).
